Make adding a word to dictionary at least remove the red line of the word Other occurences of red lines will not be removed. Have to figure out how to do that, as we may have more than one document

BUG: 323016